# bunobee

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  publish-test-pypi.yaml  publish.yml
docs/: glossary.md  labels.md  pypi-release-plan.md
playground/: prototype_v0.ipynb  prototype_v1.ipynb
playground/dlt_prototype/: dlt_v0.ipynb  dlt_v1.ipynb  dlt_v2.ipynb
playground/m5_prototype/: m5_accuracy.ipynb  m5_plan.md  m5_preprocess.py  m5_run.py  m5_score_submission.py  m5_submission_diff.py  m5_validation_report.py
playground/source/: prototype_v0.ipynb
playground/statespace_prototype/: ssp_v1.ipynb  ssp_v2.ipynb  ssp_v3.ipynb  ssp_v4.ipynb  ssp_v5.ipynb
src/bunobee/: __init__.py  hyper_tune.py  regression.py  saturation.py  utils.py
src/bunobee/models/: dlt.py
src/bunobee/models/m5/: m5_ssp_mcmc.py  m5_ssp_optim.py
src/bunobee/models/ssp/: __init__.py  kalman_1d.py  kalman_1d_ekf.py  kalman_1d_st.py  kalman_1d_st_ekf.py  transforms.py  utils.py  vfactory.py
src/wunkui/: __init__.py  hyper_tune.py  regression.py  utils.py
src/wunkui/models/: dlt.py  ssp.py
src/wunkui/models/m5/: m5_ssp_optim.py
src/wunkui/models/ssp/: __init__.py  kalman_1d.py  kalman_1d_ekf.py  kalman_1d_share_trend.py  transforms.py  univariate.py  utils.py
tests/: test_dlt.py  test_kalman_filters.py  test_kalman_smoothers.py  test_saturation.py  test_transforms.py
wunku/: hyper_tune.py  utils.py
wunku/models/: dlt.py
wunkui/: __init__.py  hyper_tune.py  regression.py  utils.py
wunkui/models/: __init__.py  dlt.py
