[project]
name = "wunkui"
version = "0.0.1dev4"
description = "The time-series engine for forecasting with JAX and NumPyro"
authors = [{name = "Edwin Ng", email = "edwinnglabs@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
dependencies = [
    "numpyro>=0.18.0",
    "jax==0.6.2",
    "pandas",
    "arviz",
    "xarray",
    "ipywidgets",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "wunkui" = "wunkui" }
packages = ["wunkui"]
include-package-data = true

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = ""
