[project]
name = "wunkui"
version = "0.0.1dev6"
description = "The time-series engine for forecasting with JAX and NumPyro"
authors = [{name = "Edwin Ng", email = "edwinnglabs@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
dependencies = [
    "numpyro>=0.18.0",
    "jax>=0.6.2",
    "pandas>=2.0",
    "arviz",
    "xarray",
    "ipywidgets",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = ""
