[project]
name = "bunobee"
version = "0.0.3dev4"
description = "The time-series engine for forecasting with JAX and NumPyro"
authors = [{name = "Edwin Ng", email = "edwinnglabs@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
dependencies = [
    "numpyro>=0.20.0",
    "jax>=0.8.0,<0.10.0",
    "pandas>=2.0",
    "arviz",
    "xarray",
    "ipywidgets",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "black==26.1.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = ""

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"